--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.5.0",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.1",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
